--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -13,9 +13,23 @@ node {
       echo "Job Name: ${env.JOB_NAME}"
       echo "Branch Name: ${env.BRANCH_NAME}"
       echo "Change id: ${env.CHANGE_ID}"  
-    
-      echo "Git Branch: ${GIT_BRANCH}"
   }
+  
+  stage('Checkout') {
+        def d = checkout scm
+        echo "GIT_URL: " + d.GIT_URL
+        echo "GIT_BRANCH: " + d.GIT_BRANCH
+        echo "GIT_COMMIT: " + d.GIT_COMMIT
+        echo "GIT_AUTHOR_EMAIL: " + d.GIT_AUTHOR_EMAIL
+        echo "GIT_COMMITTER_EMAIL: " + d.GIT_COMMITTER_EMAIL
+        echo "GIT_COMMITTER_NAME: " + d.GIT_COMMITTER_NAME
+        echo "GIT_LOCAL_BRANCH: " + d.GIT_LOCAL_BRANCH
+        echo "GIT_PREVIOUS_COMMIT: " + d.GIT_PREVIOUS_COMMIT
+        echo "GIT_PREVIOUS_SUCCESSFUL_COMMIT: " + d.GIT_PREVIOUS_SUCCESSFUL_COMMIT
+        echo "branch: " + d.GIT_BRANCH
+        echo "branch: " + d.GIT_BRANCH
+        echo "branch: " + d.GIT_BRANCH
+    }
     
   stage("Clone the project") {
     // git branch: 'main', url: 'https://github.com/nabilfeghali/jenkins-demo.git'
