--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -1,65 +1,63 @@
-node {
-            /* 
-                
-            stage("Rename Branch") {
-                      displayName = 'Custom Job Name'
+pipeline{
+    agent { label 'cbsdev_agent1' }
+    tools {
+        maven "Maven"
+    }
+    environment {
+        JAVA_HOME="${tool 'Java-1.8'}"
+        PROJECT_NAME = sh(script: 'echo $JOB_NAME', returnStdout: true).trim()
+		
+		echo "JAVA_HOME: ${JAVA_HOME}"
+        echo "PROJECT_NAME: ${PROJECT_NAME}"
+		
+    }
+	
+    stages{
+	
+        stage("Clone from Git"){
+            steps{
+                // git branch: 'master', credentialsId: 'GitLabCredentials', url:'http://gitlab.capital-banking.com/SwiftManager/MicroService/swiftmxmanagerws.git'
             }
-           
-            stage("Customize Project Name") {
-                steps {
-                    script {
-                        currentBuild.displayName = "myyyy Custom Project Name"
+        }
+        
+        
+        stage("Build With Maven") {
+            steps {
+                // sh 'mvn clean install -U -DskipTests=true'
+            }
+        }
+        
+        stage("SonarQube Analysis") {
+            steps {
+				/*
+                withCredentials([usernamePassword(credentialsId: 'SonarCredentials', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                    withSonarQubeEnv('SonarQube') {
+                        sh """
+                            sonar-scanner \
+                              -Dsonar.projectKey=${PROJECT_NAME} \
+                              -Dsonar.sources=src \
+                              -Dsonar.login=${USERNAME} \
+                              -Dsonar.password=${PASSWORD} \
+                              -Dsonar.host.url=http://10.1.116.181:9001 \
+                              -Dsonar.java.binaries=target/classes \
+                              -Dsonar.java.libraries=**/*.jar \
+                              -Dsonar.java.source=1.8 \
+                              -Dsonar.java.target=1.8
+                          """
                     }
                 }
+				*/
             }
-            */
-      
-            stage("Print Common Variables>>>>123") {
-
-                echo "RJPP_SCM_URL: ${env.RJPP_SCM_URL}"
-                echo "RJPP_JENKINSFILE: ${env.RJPP_JENKINSFILE}"
-                echo "RJPP_BRANCH: ${env.RJPP_BRANCH}"
-                echo "RJPP_LOCAL_MARKER: ${env.RJPP_LOCAL_MARKER}"
-
-                echo "Git Repository URL: ${env.GIT_URL}"
-                echo "Git Branch: ${env.GIT_BRANCH}"
-
-                echo "Job Name: ${env.JOB_NAME}"
-                echo "Branch Name: ${env.BRANCH_NAME}"
-                echo "Change id: ${env.CHANGE_ID}"  
-            }
-
-            stage('Checkout>>>>132') {
-                  def d = checkout scm
-                  echo "GIT_URL: " + d.GIT_URL
-                  echo "GIT_BRANCH: " + d.GIT_BRANCH
-                  echo "GIT_COMMIT: " + d.GIT_COMMIT
-                  echo "GIT_AUTHOR_EMAIL: " + d.GIT_AUTHOR_EMAIL
-                  echo "GIT_COMMITTER_EMAIL: " + d.GIT_COMMITTER_EMAIL
-                  echo "GIT_COMMITTER_NAME: " + d.GIT_COMMITTER_NAME
-                  echo "GIT_LOCAL_BRANCH: " + d.GIT_LOCAL_BRANCH
-                  echo "GIT_PREVIOUS_COMMIT: " + d.GIT_PREVIOUS_COMMIT
-                  echo "GIT_PREVIOUS_SUCCESSFUL_COMMIT: " + d.GIT_PREVIOUS_SUCCESSFUL_COMMIT
-                  echo "branch: " + d.GIT_BRANCH
-                  echo "branch: " + d.GIT_BRANCH
-                  echo "branch: " + d.GIT_BRANCH
-              }
-
-            stage("Clone the project") {
-              // git branch: 'main', url: 'https://github.com/nabilfeghali/jenkins-demo.git'
-            }
-
-            stage("Compilation") {
-              // bat "mvnw clean install -DskipTests"
-            }
-
-            stage("Tests and Deployment") {
-                stage("Running unit tests") {
-                    // bat "mvnw test -Punit"
-                }
-                stage("Deployment") {
-                    // bat 'start /B mvnw spring-boot:run -Dserver.port=8001'
-                }
-            }
-}
-
+        }
+        
+        stage("Publish to Nexus") {
+            steps {
+                echo "Start Publish to Nexus"
+                script {
+				
+				}
+			}
+		}
+		
+	}
+}	
