--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -7,8 +7,8 @@ pipeline{
         JAVA_HOME="${tool 'Java-1.8'}"
         PROJECT_NAME = sh(script: 'echo $JOB_NAME', returnStdout: true).trim()
 		
-		echo "JAVA_HOME: ${JAVA_HOME}"
-        echo "PROJECT_NAME: ${PROJECT_NAME}"
+	echo "JAVA_HOME= ${env.JAVA_HOME}"
+        echo "PROJECT_NAME= ${env.PROJECT_NAME}"
 		
     }
 	
