--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
     }
     environment {
         JAVA_HOME="${tool 'Java-1.8'}"
-        PROJECT_NAME = sh(script: 'echo $JOB_NAME', returnStdout: true).trim()
+        PROJECT_NAME = bat(script: 'echo %JOB_NAME%', returnStdout: true).trim()
 		
 	echo "JAVA_HOME= ${env.JAVA_HOME}"
         echo "PROJECT_NAME= ${env.PROJECT_NAME}"
