--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -12,18 +12,20 @@ pipeline{
 	
     stages{
 	
-	stage("Print Variables"){          
-	      echo "RJPP_SCM_URL: ${env.RJPP_SCM_URL}"
-	      echo "RJPP_JENKINSFILE: ${env.RJPP_JENKINSFILE}"
-	      echo "RJPP_BRANCH: ${env.RJPP_BRANCH}"
-	      echo "RJPP_LOCAL_MARKER: ${env.RJPP_LOCAL_MARKER}"
+	stage("Print Variables"){      
+	      steps{	
+		      echo "RJPP_SCM_URL: ${env.RJPP_SCM_URL}"
+		      echo "RJPP_JENKINSFILE: ${env.RJPP_JENKINSFILE}"
+		      echo "RJPP_BRANCH: ${env.RJPP_BRANCH}"
+		      echo "RJPP_LOCAL_MARKER: ${env.RJPP_LOCAL_MARKER}"
 
-	      echo "Git Repository URL: ${env.GIT_URL}"
-	      echo "Git Branch: ${env.GIT_BRANCH}"
+		      echo "Git Repository URL: ${env.GIT_URL}"
+		      echo "Git Branch: ${env.GIT_BRANCH}"
 
-	      echo "Job Name: ${env.JOB_NAME}"
-	      echo "Branch Name: ${env.BRANCH_NAME}"
-	      echo "Change id: ${env.CHANGE_ID}"             
+		      echo "Job Name: ${env.JOB_NAME}"
+		      echo "Branch Name: ${env.BRANCH_NAME}"
+		      echo "Change id: ${env.CHANGE_ID}"             
+	      }	      
         }    
 	    
         stage("Clone from Git"){
