--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -14,6 +14,9 @@ pipeline{
 	
 	stage("Print Variables"){      
 	      steps{	
+		      echo "JAVA_HOME: ${env.JAVA_HOME}"
+		      echo "PROJECT_NAME: ${env.PROJECT_NAME}"
+		      
 		      echo "RJPP_SCM_URL: ${env.RJPP_SCM_URL}"
 		      echo "RJPP_JENKINSFILE: ${env.RJPP_JENKINSFILE}"
 		      echo "RJPP_BRANCH: ${env.RJPP_BRANCH}"
