--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -29,17 +29,19 @@ pipeline{
         }
 	    
 	stage('Git Checkout') {
-	      steps{	
-                  def d = checkout scm
-                  echo "GIT_URL: " + d.GIT_URL
-                  echo "GIT_BRANCH: " + d.GIT_BRANCH
-                  echo "GIT_COMMIT: " + d.GIT_COMMIT
-                  echo "GIT_AUTHOR_EMAIL: " + d.GIT_AUTHOR_EMAIL
-                  echo "GIT_COMMITTER_EMAIL: " + d.GIT_COMMITTER_EMAIL
-                  echo "GIT_COMMITTER_NAME: " + d.GIT_COMMITTER_NAME
-                  echo "GIT_LOCAL_BRANCH: " + d.GIT_LOCAL_BRANCH
-                  echo "GIT_PREVIOUS_COMMIT: " + d.GIT_PREVIOUS_COMMIT
-                  echo "GIT_PREVIOUS_SUCCESSFUL_COMMIT: " + d.GIT_PREVIOUS_SUCCESSFUL_COMMIT
+	      steps{
+		  script {    
+			  def d = checkout scm
+			  echo "GIT_URL: " + d.GIT_URL
+			  echo "GIT_BRANCH: " + d.GIT_BRANCH
+			  echo "GIT_COMMIT: " + d.GIT_COMMIT
+			  echo "GIT_AUTHOR_EMAIL: " + d.GIT_AUTHOR_EMAIL
+			  echo "GIT_COMMITTER_EMAIL: " + d.GIT_COMMITTER_EMAIL
+			  echo "GIT_COMMITTER_NAME: " + d.GIT_COMMITTER_NAME
+			  echo "GIT_LOCAL_BRANCH: " + d.GIT_LOCAL_BRANCH
+			  echo "GIT_PREVIOUS_COMMIT: " + d.GIT_PREVIOUS_COMMIT
+			  echo "GIT_PREVIOUS_SUCCESSFUL_COMMIT: " + d.GIT_PREVIOUS_SUCCESSFUL_COMMIT
+		  }
               }
 	}	    
     }
