--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -51,5 +51,16 @@ pipeline{
             }
         }
 	    
+	stage("Tests and Deployment") {
+                stage("Running unit tests") {
+                    bat "mvnw test -Punit"
+                }
+		/*	
+                stage("Deployment") {
+                     bat 'start /B mvnw spring-boot:run -Dserver.port=8001' 
+                }
+		*/
+            }    
+	    
     }
 }
