--- a/jenkinsfile-common/Jenkinsfile
+++ b/jenkinsfile-common/Jenkinsfile
@@ -50,16 +50,11 @@ pipeline{
                 bat 'mvn clean install -U -DskipTests=true'
             }
         }
-	    
-	stage("Tests and Deployment") {
-                stage("Running unit tests") {
+	
+	stage("Running unit tests") {
+	    steps { 	
                     bat "mvnw test -Punit"
-                }
-		/*	
-                stage("Deployment") {
-                     bat 'start /B mvnw spring-boot:run -Dserver.port=8001' 
-                }
-		*/
-         }    
+            }
+	}	
     }
 }
